# hello-nomike

./: CMakeLists.txt  hello-nomike-impl.cpp  hello-nomike.cpp  hello.scm  test.cpp
